<resources>

    <string name="google_maps_api_keys">AIzaSyDZcr4dV_JetII21OUE3TrtxSF5CsNlcg4</string>
    <string name="app_name">EIMS</string>
    <string name="app_name_detail">EMERIO Information Management System</string>

    <!--string yang ada di page login-->
    <string name="welcome">WELCOME</string>
    <string name="email_placeholder">Email</string>
    <string name="password_placeholder">Password</string>
    <string name="remember_login">Remember my login</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">Forgot Password?</string>

    <!--string yang di bawah ini ada buat di main page/setelah login-->
    <string name="sign_out">Sign Out</string>
    <string name="menu_attendance">Attendance</string>
    <string name="menu_leave">Leave</string>
    <string name="menu_claim">Claim</string>
    <string name="menu_task">Task</string>
    <string name="menu_report">Report</string>
    <string name="menu_employee">Employee</string>
    <string name="menu_profile">Profile</string>

    <!--string yang di bawah ini ada buat di attendance page-->
    <string name="date_time_now">Current Date Time</string>
    <string name="date">Date</string>
    <string name="clock_in">Clock In</string>
    <string name="clock_out">Clock Out</string>
    <string name="colon">:</string>

    <!--string yang di bawah ini ada buat di leave page-->
    <string name="leave_type">Leave Type</string>
    <string name="reported_to">Reported To</string>
    <string name="notes">Notes</string>
    <string name="attachment">Attachment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="greater_than_character">&gt;</string>
    <string name="button_back">&lt; Back</string>
    <string name="project">Project</string>
    <string name="date_from">Date From</string>
    <string name="date_to">Date To</string>
    <string name="submit">Submit</string>
    <string name="upload_file">Upload File</string>
    <string name="no_file_selected">No File Selected</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title">Title</string>
    <string name="currency">Currency</string>
    <string name="amount">Amount</string>
    <string name="type">Type</string>
    <string name="account_reimbursement">Account (BCA)</string>


    <string name="from">From</string>
    <string name="to">To</string>
    <string name="status">Status</string>
    <string name="search">Search</string>
    <string name="clear">Clear</string>
    <string name="show">Show</string>
    <string name="approve">Approve</string>
    <string name="reject">Reject</string>
    <string name="remarks">Remarks</string>

    <string name="master_data">Master Data</string>

    <string name="employeeID">Employee ID</string>
    <string name="name">Name</string>
    <string name="add">Add</string>
    <string name="addNew">Add New</string>
    <string name="addForm">Add Form</string>
    <string name="editForm">Edit Form</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="address">Address</string>
    <string name="phoneNumber">Phone No</string>
    <string name="hiredDate">Hired Date</string>
    <string name="employeeTag">Employee Tag</string>
    <string name="description">Description</string>


    <string name="projectList">Project List</string>
    <string name="projectAssigned">Project Assigned</string>
    <string name="projectId">Project ID</string>
    <string name="projectName">Project Name</string>
    <string name="projectMember">Project Member</string>
    <string name="projectManager">Project Manager</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string-array name="currencyID">
        <item>IDR</item>
        <item>USD</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
</resources>
