<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AdminMain"
    android:weightSum="10"
    android:layout_marginHorizontal="20dp"
    android:layout_marginVertical="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <View android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_out"
            android:onClick="signOut"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:layout_weight="8"
        android:background="@drawable/rounded_rec"
        android:orientation="vertical"
        android:weightSum="9">
        <TextView
            android:layout_marginVertical="20dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/master_data"
            android:fontFamily="@font/josefinsans"
            android:textSize="15pt"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/menu_employee"
            android:id="@+id/menu_employee"
            android:onClick="onclickChangeMenu"
            android:background="@drawable/button_rec"
            android:layout_marginVertical="10dp"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/project"
            android:id="@+id/menu_project"
            android:onClick="onclickChangeMenu"
            android:background="@drawable/button_rec"
            android:backgroundTint="#dff6f0"
            android:layout_marginVertical="10dp"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/menu_attendance"
            android:id="@+id/menu_attendance"
            android:onClick="onclickChangeMenu"
            android:background="@drawable/button_rec"
            android:layout_marginVertical="10dp"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/menu_leave"
            android:onClick="onclickChangeMenu"
            android:text="@string/menu_leave"
            android:background="@drawable/button_rec"
            android:backgroundTint="#dff6f0"
            android:layout_marginVertical="10dp"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/menu_claim"
            android:id="@+id/menu_claim"
            android:onClick="onclickChangeMenu"
            android:background="@drawable/button_rec"
            android:layout_marginVertical="10dp"
            android:gravity="center"/>
    </LinearLayout>
</LinearLayout>
