<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Leave"
    android:onClick="hideUploadedPicture">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".Leave"
        android:weightSum="10"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Employee Name,\nemail"
                android:id="@+id/nameAndEmail"/>
        </LinearLayout>
        <View android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:layout_weight="8"
        android:background="@drawable/rectangle"
        android:orientation="vertical"
        android:weightSum="5">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leave_type"
            android:layout_marginVertical="10dp"/>

        <Spinner
            android:id="@+id/spinnerLeaveType"
            android:layout_width="match_parent"
            android:layout_height="40dp"></Spinner>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reported_to"
            android:layout_marginVertical="10dp"/>

        <Spinner
            android:id="@+id/spinnerProjectAttendance"
            android:layout_width="match_parent"
            android:layout_height="40dp"></Spinner>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginVertical="10dp"
            android:weightSum="10">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/date_from"
                android:gravity="center_vertical"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/colon"
                android:gravity="center_vertical"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:id="@+id/dateFrom"
                android:onClick="showDatePicker"
                android:clickable="true"
                android:background="@drawable/rectangle"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/calendar"
                android:layout_marginHorizontal="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginVertical="10dp"
            android:weightSum="10">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/date_to"
                android:gravity="center_vertical"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/colon"
                android:gravity="center_vertical"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:id="@+id/dateTo"
                android:clickable="true"
                android:onClick="showDatePicker"
                android:background="@drawable/rectangle"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/calendar"
                android:layout_marginHorizontal="10dp"/>
        </LinearLayout>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notes"
                />
        <EditText
            android:inputType="textMultiLine"
            android:lines="8"
            android:minLines="6"
            android:gravity="top|left"
            android:maxLines="10"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:scrollbars="vertical"
            android:background="@drawable/rectangle"
            android:id="@+id/notes"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attachment"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload_file"
                android:onClick="showUploadFragment"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_file_selected"
                android:id="@+id/uploadedPictureStatus"
                android:onClick="showUploadedPicture"
                />
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10pt"
        android:fontFamily="@font/josefinsans"
        android:text="@string/button_back"
        android:onClick="onClickBackButton"/>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="100dp"
        >
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/fragmentImageLeave"
            android:gravity="center"
            >
        </FrameLayout>
    </LinearLayout>
</RelativeLayout>