<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TaskMain"
    android:weightSum="10"
    android:layout_marginHorizontal="20dp"
    android:layout_marginVertical="20dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Employee Name,\nemail"
        android:id="@+id/nameAndEmail"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:layout_weight="8"
        android:background="@drawable/rounded_rec"
        android:orientation="vertical"
        android:weightSum="8">
        <TextView
            android:layout_marginVertical="20dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/menu_task"
            android:fontFamily="@font/josefinsans"
            android:textSize="15pt"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/menu_leave"
            android:onClick="onclickChangeMenu"
            android:text="@string/menu_leave"
            android:background="@drawable/button_rec"
            android:layout_marginVertical="10dp"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/menu_claim"
            android:id="@+id/menu_claim"
            android:onClick="onclickChangeMenu"
            android:background="@drawable/button_rec"
            android:backgroundTint="#dff6f0"
            android:layout_marginVertical="10dp"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/project"
            android:id="@+id/menu_project"
            android:onClick="onclickChangeMenu"
            android:background="@drawable/button_rec"
            android:layout_marginVertical="10dp"
            android:gravity="center"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10pt"
        android:fontFamily="@font/josefinsans"
        android:text="@string/button_back"
        android:onClick="onClickBackButton"/>
</LinearLayout>
