<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClaimDetail">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="10"
                android:layout_marginVertical="2dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_weight="3"
                    android:text="@string/title"
                    />
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="7"
                    android:id="@+id/title"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="10"
                android:layout_marginVertical="2dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_weight="3"
                    android:text="@string/project"
                    />
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="7"
                    android:id="@+id/spinnerProject"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="10"
                android:layout_marginVertical="2dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_weight="3"
                    android:text="@string/type"
                    />
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="7"
                    android:id="@+id/spinnerType"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="10"
                android:layout_marginVertical="2dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_weight="3"
                    android:text="@string/date"
                    />
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="7"
                    android:id="@+id/date"
                    android:clickable="true"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="10"
                android:layout_marginVertical="2dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_weight="3"
                    android:text="@string/currency"
                    />
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="7"
                    android:id="@+id/spinnerCurrency"
                    android:entries="@array/currencyID"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="10"
                android:layout_marginVertical="2dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_weight="3"
                    android:text="@string/amount"/>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="7"
                    android:inputType="number"
                    android:id="@+id/amount"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="10"
                android:layout_marginVertical="2dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_weight="3"
                    android:text="@string/account_reimbursement"/>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="7"
                    android:id="@+id/account"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="10"
                android:layout_marginVertical="2dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:text="@string/notes"
                    android:gravity="center_vertical"
                    />
                <TextView
                        android:lines="8"
                        android:minLines="6"
                        android:maxLines="10"
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:layout_weight="7"
                        android:scrollbars="vertical"
                        android:id="@+id/notes"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="10">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/attachment"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show"
                    android:onClick="showUploadedPicture"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</FrameLayout>